changed build from using p2 repositories to target platform  definitions